src/test/deca/codegen/invalid/no-objects/overflow_sub.deca
// Description:
//    Test d'une soustraction de flottant jusqu'a overflow
//
// Resultats:
//    Erreur : débordement pendant opération arithmétique entre deux flottants.
//
// Historique:
//    cree le 15/01/2022
{
    float a = 0x1.0p+127;
    println(-a-a);
}
